added basic cards

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,1 +1,9 @@
+@import "colors";
+@import "variables";
+@import "mixins";
+
+@import "general/fonts";
+@import "general/layout";
+
+@import "components/button/button-fab";
 @import "components/dating/dating";
