--- a/components/dating/_dating.scss
+++ b/components/dating/_dating.scss
@@ -1,3 +1,56 @@
-.dating-container {
-	
+.swipe-container {
+    width: 100%;
+    height: 90vh;
+    max-width: $swipe-max-width;
+    position: relative;
+    margin: 5vh auto;
+    
+    .swipe-button {
+    	position: absolute;
+    	top: 50%;
+    	margin-top: -$button-fab-size/2;
+    }
+}
+.card {
+    overflow: hidden;
+    @include vendorize(border-radius, $border-radius);
+    @include vendorize(box-shadow, 0 2px 4px rgba(#111, .4));
+    background-color: #fff;
+
+    .card-header {
+    	position: relative;
+    	background-repeat: no-repeat;
+    	background-position: top center;
+    	background-size: cover;
+    	padding-top: 60%;
+    	.card-header-legend {
+    		position: absolute;
+    		bottom: 0;
+    		left: 0;
+    		right: 0;
+    		padding: 1em .6em .4em;
+    		color: #fff;
+    		@include vendorize(text-shadow, 0 1px 0 #111);
+
+			background: -moz-linear-gradient(top,  rgba(#000, 0) 0%, rgba(#000, .4) 100%);
+			background: -webkit-linear-gradient(top,  rgba(#000, 0) 0%,rgba(#000, .4) 100%);
+			background: linear-gradient(to bottom,  rgba(#000, 0) 0%,rgba(#000, .4) 100%);
+    	}
+    }
+
+    &.stack {
+	    position: absolute;
+	    top: 0;
+		left: $button-fab-size*1.2;
+		right: $button-fab-size*1.2;
+	    @include vendorize(transform-origin, 50% 110%);
+		@include vendorize(transition, transform .2s ease-in);
+
+	    @for $i from 1 through 6 {
+	    	&:nth-child(#{$i}) {
+	    		z-index: #{6 - $i};
+	    		@include vendorize(transform, scale(#{1-(($i - 1)/10)}));
+	    	}
+	    }
+    }
 }
