adding and removing from lists

--- a/patterns/atoms/button/_button-fab.scss
+++ b/patterns/atoms/button/_button-fab.scss
@@ -1,4 +1,5 @@
 .button-fab {
+    cursor: pointer;
     @include vendorize(border-radius, 100%);
     width: $button-fab-size;
     height: $button-fab-size;
