--- a/patterns/organisms/dating/dating.jade
+++ b/patterns/organisms/dating/dating.jade
@@ -1,7 +1,7 @@
 include /patterns/atoms/button/_button-fab.jade
 
 div(class='swipe-container')
-	div(class='card stack', ng-repeat='card in cards track by card.listing_id')
+	div(class='card stack', ng-repeat='card in cards track by card.listing_id', drag-me="")
 		include /patterns/molecules/card-header/_card-header.jade
 	+button-fab('love', "moveCardToList(cards[0].listing_id, 'love')", "$root.url.icons + 'love.svg'")
 	+button-fab('discard', "moveCardToList(cards[0].listing_id, 'discard')", "$root.url.icons + 'discard.svg'")
